<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="20dp"
	android:gravity="center_horizontal">

	<TextView
		android:layout_marginBottom="15dp"
		android:text="@string/app_name"
		android:textSize="20pt"
		style="@style/text" />

	<ImageView
		android:layout_marginBottom="20dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/clock" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginBottom="5dp"
		android:orientation="horizontal">
		<TextView
			android:text="@string/label_version"
			android:layout_weight="1"
			style="@style/date" />
		<TextView
			android:text="@string/app_version"
			style="@style/value" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginBottom="5dp"
		android:orientation="horizontal">
		<TextView
			android:text="@string/label_author"
			android:layout_weight="1"
			style="@style/date" />
		<TextView
			android:text="@string/app_author"
			style="@style/value" />
	</LinearLayout>

	<TextView
		android:layout_width="fill_parent"
		android:layout_marginRight="20dp"
		android:gravity="right"
		android:autoLink="email"
		android:text="@string/app_author_email"
		style="@style/preferences" />

	<TextView
		android:layout_weight="1"
		android:gravity="bottom"
		android:autoLink="web"
		android:text="@string/tango_acknowledgement"
		style="@style/acknowledgements" />

	<TextView
		android:gravity="bottom"
		android:autoLink="web"
		android:text="@string/tango_url"
		style="@style/acknowledgements" />

</LinearLayout>
