<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dp">

	<TextView
		android:id="@+id/today"
		android:layout_width="fill_parent"
		android:layout_marginBottom="15dp"
		android:gravity="center_horizontal"
		style="@style/date" />

	<ImageView
		android:id="@+id/horario"
		android:layout_below="@id/today"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="35dp"
		android:layout_centerHorizontal="true" />

	<RelativeLayout
		android:id="@+id/layout_periodo"
		android:layout_below="@id/horario"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15dp"
		android:gravity="center_vertical">

		<ImageView
			android:id="@+id/img_periodo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="15dp" />

		<TextView
			android:layout_alignTop="@id/img_periodo"
			android:layout_toRightOf="@id/img_periodo"
			android:text="@string/label_periodo"
			style="@style/date" />

		<TextView
			android:id="@+id/periodo"
			android:layout_alignBottom="@id/img_periodo"
			android:layout_toRightOf="@id/img_periodo"
			style="@style/text" />
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/layout_next"
		android:layout_below="@id/layout_periodo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">

		<ImageView
			android:id="@+id/img_next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="15dp"
			android:src="@drawable/button_next" />

		<TextView
			android:layout_alignTop="@id/img_next"
			android:layout_toRightOf="@id/img_next"
			android:text="@string/label_next"
			style="@style/date" />

		<TextView
			android:id="@+id/next_horario"
			android:layout_alignBottom="@id/img_next"
			android:layout_toRightOf="@id/img_next"
			android:layout_marginRight="10dp"
			style="@style/value" />

		<TextView
			android:id="@+id/next_change"
			android:layout_alignBaseline="@id/next_horario"
			android:layout_toRightOf="@id/next_horario"
			style="@style/when" />
	</RelativeLayout>

	<LinearLayout
		android:id="@+id/layout_ciclo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:gravity="center_vertical">

		<TextView
			android:layout_weight="1"
			android:text="@string/label_ciclo"
			style="@style/preferences" />

		<Spinner
			android:id="@+id/spinner_ciclo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/prompt_ciclo" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/layout_ciclo"
		android:orientation="horizontal"
		android:gravity="center_vertical">

		<TextView
			android:layout_weight="1"
			android:text="@string/label_tarifa"
			style="@style/preferences" />

		<Spinner
			android:id="@+id/spinner_tarifa"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/prompt_tarifa" />
	</LinearLayout>
</RelativeLayout>